--- a/src/lims/receivingPage.fxml
+++ b/src/lims/receivingPage.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
@@ -16,7 +21,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<VBox xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <children>
     <MenuBar VBox.vgrow="NEVER">
       <menus>
@@ -57,13 +62,153 @@
         </Menu>
       </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" VBox.vgrow="ALWAYS">
-      <children>
-            <TabPane layoutX="8.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <GridPane alignment="CENTER" prefHeight="740.0" prefWidth="1255.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <TabPane tabClosingPolicy="UNAVAILABLE">
               <tabs>
                 <Tab text="Receiving">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0">
+                     <content>
+                        <GridPane alignment="CENTER" cacheHint="SCALE" nodeOrientation="LEFT_TO_RIGHT" prefHeight="740.0" prefWidth="1255.0" snapToPixel="false">
+                          <columnConstraints>
+                            <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="ALWAYS" />
+                            <RowConstraints minHeight="10.0" prefHeight="100.0" valignment="CENTER" vgrow="ALWAYS" />
+                          </rowConstraints>
+                           <children>
+                              <Label alignment="CENTER" prefHeight="35.0" prefWidth="510.0" style="-fx-background-color: #0D0052; -fx-background-radius: 15 15 15 15;" text="In-Processing" textAlignment="CENTER" textFill="WHITE" translateY="-140.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label alignment="CENTER" prefHeight="35.0" prefWidth="508.0" style="-fx-background-color: #0D0052; -fx-background-radius: 15 15 15 15;" text="Evaluation / Measures" textAlignment="CENTER" textFill="WHITE" translateY="-140.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="CENTER" prefHeight="35.0" prefWidth="510.0" style="-fx-background-color: #0D0052; -fx-background-radius: 15 15 15 15;" text="Sample Information" textAlignment="CENTER" textFill="WHITE" translateY="-140.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label alignment="CENTER" prefHeight="35.0" prefWidth="510.0" style="-fx-background-color: #0D0052; -fx-background-radius: 15 15 15 15;" text="Box Information" textAlignment="CENTER" textFill="WHITE" translateY="-140.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="24.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Date of In-Processing" translateX="-140.0" translateY="-70.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Time of In-Processing" translateX="-140.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="In-Processed by" translateX="-140.0" translateY="70.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <GridPane.margin>
+                                    <Insets />
+                                 </GridPane.margin>
+                              </Label>
+                              <DatePicker prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-70.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                              <TextField alignment="CENTER" maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                              <TextField alignment="CENTER" maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="70.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                              <Button mnemonicParsing="false" text="Time" translateX="250.0" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Analyte Volume (mL)" translateX="-140.0" translateY="-70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Water Type" translateX="-140.0" translateY="-35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <ComboBox prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-70.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Abnormailities" translateX="-140.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Incubator" translateX="-140.0" translateY="35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Detection Limit" translateX="-140.0" translateY="70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="250.0" prefHeight="25.0" prefWidth="250.0" translateX="100.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS" />
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Blank Information" translateX="-140.0" translateY="-70.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Field ID of Sample" translateX="-140.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Color Identification" translateX="-140.0" translateY="70.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="70.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="35.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="35.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <TextField maxWidth="-Infinity" prefHeight="25.0" prefWidth="250.0" translateX="100.0" translateY="-70.0" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Condition of Box" translateX="-140.0" translateY="-70.0" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="59.0" prefWidth="186.0" text="Box Representative &#10;Temperature (C)" translateX="-140.0" translateY="-35.0" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Number of Ice Packs" translateX="-140.0" translateY="35.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                              <Label prefHeight="27.0" prefWidth="186.0" text="Boxes/Coolers" translateX="-140.0" translateY="70.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </GridPane>
+                     </content>
+                </Tab>
+                <Tab text="Processing">
+                     <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="732.0" prefWidth="895.0">
                            <children>
                               <Label alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="35.0" prefWidth="510.0" style="-fx-background-color: #0D0052; -fx-background-radius: 15 15 15 15;" text="In-Processing" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="14.0">
                                  <font>
@@ -117,7 +262,7 @@
                               <TextField layoutX="200.0" layoutY="431.0" prefHeight="25.0" prefWidth="298.0" />
                               <TextField layoutX="200.0" layoutY="480.0" prefHeight="25.0" prefWidth="298.0" />
                               <CheckBox layoutX="512.0" layoutY="435.0" mnemonicParsing="false" text="Blank" />
-                              <Label layoutX="14.0" layoutY="479.0" prefHeight="27.0" prefWidth="186.0" text="Lab Sample ID (SIN)">
+                              <Label layoutX="802.0" layoutY="505.0" prefHeight="27.0" prefWidth="186.0" text="Lab Sample ID (SIN)">
                                  <font>
                                     <Font size="18.0" />
                                  </font>
@@ -186,12 +331,7 @@
                               <Button layoutX="511.0" layoutY="122.0" mnemonicParsing="false" text="Time" />
                            </children>
                         </AnchorPane>
-                  </content>
-                </Tab>
-                <Tab text="Processing">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="161.0" prefWidth="574.0" />
-                  </content>
+                     </content>
                 </Tab>
                   <Tab text="NT-S">
                      <content>
@@ -210,12 +350,26 @@
                   </Tab>
                   <Tab text="Confirmation">
                      <content>
-                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="161.0" prefWidth="574.0" />
+                        <GridPane>
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="64.0" prefWidth="101.0" text="OK" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                              <CheckBox mnemonicParsing="false" text="CheckBox" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS" />
+                           </children>
+                        </GridPane>
                      </content>
                   </Tab>
               </tabs>
             </TabPane>
-      </children>
-    </AnchorPane>
+         </children>
+      </GridPane>
   </children>
 </VBox>
